17 Dec 2006 FPR command to display register pairs - Roger Bowler
17 Dec 2006 Display DXC in msg HHCCP014I for PIC7 - Roger Bowler
11 Dec 2006 Set tape blockid to U32 - (by "zazubek") - Ivan Warren
08 Dec 2006 Add model, plant and manufacturer config parameter - Bernard
06 Dec 2006 Include Mike Cowlishaw decNumber package - Roger Bowler
30 Nov 2006 Floating Point Support Enhancement feature - Roger Bowler
29 Nov 2006 Zero out GPRS on IPL Clear and System clear - Ivan Warren
29 Nov 2006 Begin Decimal Floating Point (DFP) framework - Roger Bowler
27 Nov 2006 Remove GNU dependencies from dasdlist - Bjoern A. Zeeb (rbowler)
26 Nov 2006 Move initialization hao before .rc processing - Bernard
22 Nov 2006 Fix aws/het files trailing garbage - Fish
19 Nov 2006 Fix small typo in qdio.c - Jan Jaeger
18 Nov 2006 Multi-byte opcode performance fix for ia32 - Greg Smith
09 Nov 2006 qd (query ckd dasd) panel command - Greg Smith
08 Nov 2006 Fix (hopefully) hang after resume - Greg Smith
08 Nov 2006 Fix Diag 204 RMF structure size - Ivan Warren
            Detected by "aleeuw2000"
06 Nov 2006 Update to instfetch processing - Greg Smith
06 Nov 2006 Fix ECPS:VM VTIMER processing - Ivan Warren
05 Nov 2006 OBTAIN_MAINLOCKx macros - Greg Smith
05 Nov 2006 Simplify PER processing - Greg Smith
04 Nov 2006 Added CGER, CGDR, CGXR - Bernard van der Helm
31 Oct 2006 Use accelerated byte swaps for x86_64 - Ivan Warren
30 Oct 2006 Reinstate dasdconv stdin option - Roger Bowler
27 Oct 2006 Reformatted dyncrypt.c, no functional change - Bernard
26 Oct 2006 make KM/KMC/KMAC/KIMD/KLMD compliant regarding stringent
            register checkings as per POP - Ivan Warren
25 Oct 2006 Performance enhancements suggested by Kees, part 1
            distinguish between strict/non-strict load/store - Greg Smith
19 Oct 2006 Fix TUNSETIFF problem on linux 2.6.18 - Greg Smith
12 Oct 2006 Fix 370 and 390 only modes - Greg Smith
09 Oct 2006 Fix some compiler warnings - Ivan Warren