@@ -354,6 +354,7 @@ panel commands.
     psw          display program status word
     gpr          display general purpose registers
     fpr          display floating point registers
+    fpc          display floating point control register
     cr           display control registers
     ar           display access registers
     pr           display prefix register
